--- a/assets/css/own.css
+++ b/assets/css/own.css
@@ -56,7 +56,6 @@
 
 .news-scroll a {
     text-decoration: none;
-    text-decoration-color: black;
 }
 
 .dot {
@@ -68,4 +67,28 @@
     background-color: rgb(207, 23, 23);
     border-radius: 50%;
     display: inline-block
+}
+
+.flag-btn {
+  margin-left: 25px;
+  background: #3fbbc0;
+  color: #fff;
+  border-radius: 4px;
+  padding: 5px 10px;
+  white-space: nowrap;
+  transition: 0.3s;
+  font-size: 14px;
+  display: inline-block;
+}
+
+.flag-btn:hover {
+  background: #65c9cd;
+  color: #fff;
+}
+
+@media (max-width: 768px) {
+  .flag-btn {
+    margin: 0 15px 0 0;
+    padding: 6px 15px;
+  }
 }
