--- a/assets/css/own.css
+++ b/assets/css/own.css
@@ -63,7 +63,8 @@
     width: 4px;
     margin-left: 3px;
     margin-right: 3px;
-    margin-top: 3px !important;
+    margin-top: 2px !important;
+    margin-bottom: 3px !important;
     background-color: rgb(0, 0, 0);
     border-radius: 50%;
     display: inline-block
@@ -116,4 +117,20 @@
 
 .col-left {
     text-align:left;
+}
+
+
+
+
+
+.service-icon1 {
+	background-image: url(../svg/1.svg);
+}
+
+.flag-icon-gb {
+	background-image: url(../svg/gb.svg);
+}
+
+.flag-icon-gb.flag-icon-squared {
+	background-image: url(../svg/gb11.svg);
 }
