protect mail link against spam

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,6 +137,13 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 0;
 }
 
+#topbar a {
+  color: #fff;
+}
+
+#topbar a:hover {
+  color: #555555;
+}
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
