--- a/assets/css/BAKteststyle.css
+++ b/assets/css/BAKteststyle.css
@@ -422,7 +422,7 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 65vh; /* by Guy TODO for hero */
+  height: 60vh; /* by Guy TODO for hero */
   background-color: rgba(60, 60, 60, 0.8);
   overflow: hidden;
   position: relative;
@@ -434,15 +434,26 @@ h1, h2, h3, h4, h5, h6 {
   right: 0;
   left: 0;
   bottom: 0;
+    height: 100%; /* by Guy TODO for hero */
 }
 
 #hero .carousel-item {
+        background-size: cover;
+    max-height: 100vh;
+    max-width: 30vw;
+    
+    min-width: 100vw;
+    min-height: 30vh;
+  
   background-size: cover;
-  background-position: center;
+  background-position: center center;
   background-repeat: no-repeat;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
+
+    background-position: center center;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
 }
 
 #hero .container {
@@ -509,8 +520,8 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 50px;
   transition: 0.3s;
   color: rgba(255, 255, 255, 0.5);
-  width: 45px;
-  height: 45px;
+  width: 44px;
+  height: 44px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -558,7 +569,7 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (max-width: 992px) {
   #hero {
-    height: 65vh;
+    height: 60vh;
   }
   #hero .container {
     margin-top: 100px;
@@ -1457,7 +1468,9 @@ section {
   background: #3fbbc0;
   color: #fff;
   background-size: cover;
-  padding: 60px 0;
+  padding: 30px 0;
+    margin: 0 auto 30px auto;
+    color: #555555;
 }
 
 .faq .faq-list {
@@ -1467,8 +1480,8 @@ section {
 
 .faq .faq-list li {
   border-bottom: 1px solid #d9f1f2;
-  margin-bottom: 20px;
-  padding-bottom: 20px;
+  margin-bottom: 15px;
+  padding-bottom: 15px;
 }
 
 .faq .faq-list .question {
@@ -1517,6 +1530,16 @@ section {
   display: none;
   transition: 0.6s;
 }
+
+#faq .container {
+  text-align: left;
+  background: rgba(255, 255, 255, 0.9);
+  padding-top: 30px;
+  padding-bottom: 30px;
+  margin-bottom: 50px;
+  border-top: 4px solid #3fbbc0;
+}
+
 
 /*--------------------------------------------------------------
 # Contact
