--- a/assets/css/teststyle.css
+++ b/assets/css/teststyle.css
@@ -423,7 +423,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 65vh; /* by Guy TODO for hero */
-  background-color: rgba(60, 60, 60, 0.8);
+  background-color: transparent;
   overflow: hidden;
   position: relative;
 }
@@ -436,7 +436,7 @@ h1, h2, h3, h4, h5, h6 {
   bottom: 0;
 }
 
-#hero .carousel-item {
+#hero .carousel-item {  
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -509,8 +509,8 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 50px;
   transition: 0.3s;
   color: rgba(255, 255, 255, 0.5);
-  width: 45px;
-  height: 45px;
+  width: 50px;
+  height: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
