--- a/assets/css/teststyle.css
+++ b/assets/css/teststyle.css
@@ -422,7 +422,7 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 65vh; /* by Guy TODO for hero */
+  height: 70vh; /* by Guy TODO for hero */
   background-color: transparent;
   overflow: hidden;
   position: relative;
@@ -436,11 +436,10 @@ h1, h2, h3, h4, h5, h6 {
   bottom: 0;
 }
 
-#hero .carousel-item {  
-  background-size: cover;
+#hero .carousel-item { 
+  background-size: 100% 100%;
   background-position: center;
   background-repeat: no-repeat;
-  display: flex;
   justify-content: center;
   align-items: flex-end;
 }
@@ -558,7 +557,7 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (max-width: 992px) {
   #hero {
-    height: 65vh;
+    height: 70vh;
   }
   #hero .container {
     margin-top: 100px;
