fix responsive caroussel pb

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -583,6 +583,16 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+@media (max-width: 500px) {
+  #hero {
+    height: 50vh;
+  }
+  #hero .carousel-item {
+    height: 50vh;
+  }
+}
+
+
 /*--------------------------------------------------------------
 # Sections General
 --------------------------------------------------------------*/
