--- a/assets/css/teststyle.css
+++ b/assets/css/teststyle.css
@@ -438,9 +438,10 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero .carousel-item { 
   background-size: 100% 100%;
+  position: relative;
+  min-height: 70vh;
   background-position: center;
   background-repeat: no-repeat;
-  justify-content: center;
   align-items: flex-end;
 }
 
@@ -557,14 +558,27 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (max-width: 992px) {
   #hero {
-    height: 70vh;
+    height: 55vh;
   }
   #hero .container {
     margin-top: 100px;
   }
 }
 
+@media (max-width: 500px) {
+  #hero {
+    height: 50vh;
+  }
+  #hero .carousel-item {
+    height: 50vh;
+  }
+}
+
 @media (max-width: 768px) {
+  #hero {
+    height: 50vh;
+  }
+      
   #hero h2 {
     font-size: 28px;
   }
