First changes after meeting 15.05.2022

--- a/assets/css/teststyle.css
+++ b/assets/css/teststyle.css
@@ -567,11 +567,12 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (max-width: 500px) {
     #hero {
-    height: 30vh;
+    min-height: 50vh;
   }
   
-    #hero .carousel-item {
-    height: 30vh;
+    
+ #hero .carousel-item {
+    min-height: 50vh;
   }
 }
 
