--- a/assets/css/teststyleOLD.css
+++ b/assets/css/teststyleOLD.css
@@ -422,8 +422,8 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 60vh; /* by Guy TODO for hero */
-  background-color: rgba(60, 60, 60, 0.8);
+  height: 70vh; /* by Guy TODO for hero */
+  background-color: transparent;
   overflow: hidden;
   position: relative;
 }
@@ -434,26 +434,15 @@ h1, h2, h3, h4, h5, h6 {
   right: 0;
   left: 0;
   bottom: 0;
-    height: 100%; /* by Guy TODO for hero */
 }
 
-#hero .carousel-item {
-        background-size: cover;
-    max-height: 100vh;
-    max-width: 30vw;
-    
-    min-width: 100vw;
-    min-height: 30vh;
-  
+#hero .carousel-item { 
   background-size: cover;
-  background-position: center center;
+  background-position: center;
   background-repeat: no-repeat;
-
-    background-position: center center;
-    background-repeat: no-repeat;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
 }
 
 #hero .container {
@@ -520,8 +509,8 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 50px;
   transition: 0.3s;
   color: rgba(255, 255, 255, 0.5);
-  width: 44px;
-  height: 44px;
+  width: 50px;
+  height: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -569,14 +558,29 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (max-width: 992px) {
   #hero {
-    height: 60vh;
+    height: 55vh;
   }
   #hero .container {
     margin-top: 100px;
   }
 }
 
+@media (max-width: 500px) {
+    #hero {
+    min-height: 50vh;
+  }
+  
+    
+ #hero .carousel-item {
+    min-height: 50vh;
+  }
+}
+
 @media (max-width: 768px) {
+  #hero {
+    height: 60vh;
+  }
+      
   #hero h2 {
     font-size: 28px;
   }
@@ -1468,9 +1472,7 @@ section {
   background: #3fbbc0;
   color: #fff;
   background-size: cover;
-  padding: 30px 0;
-    margin: 0 auto 30px auto;
-    color: #555555;
+  padding: 20px 0;
 }
 
 .faq .faq-list {
@@ -1480,8 +1482,8 @@ section {
 
 .faq .faq-list li {
   border-bottom: 1px solid #d9f1f2;
-  margin-bottom: 15px;
-  padding-bottom: 15px;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
 }
 
 .faq .faq-list .question {
@@ -1530,16 +1532,6 @@ section {
   display: none;
   transition: 0.6s;
 }
-
-#faq .container {
-  text-align: left;
-  background: rgba(255, 255, 255, 0.9);
-  padding-top: 30px;
-  padding-bottom: 30px;
-  margin-bottom: 50px;
-  border-top: 4px solid #3fbbc0;
-}
-
 
 /*--------------------------------------------------------------
 # Contact
