reduce inner page font size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -822,6 +822,12 @@ section {
   margin-bottom: 0;
 }
 
+.about .inner {
+  line-height: 24px;
+  font-size: 14px;
+}
+
+
 /*--------------------------------------------------------------
 # Counts
 --------------------------------------------------------------*/
