--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -437,7 +437,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero .carousel-item {
-  background-size: 100% 100%;
+  background-size: center; /*100% 100%;*/
   background-position: center;
   background-repeat: no-repeat;
   display: flex;
@@ -446,7 +446,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero .container {
-  text-align: center;
+  text-align: cover;
   background: rgba(255, 255, 255, 0.9);
   padding-top: 30px;
   padding-bottom: 30px;
@@ -558,7 +558,7 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (max-width: 992px) {
   #hero {
-    height: 50vh;
+    height: 60vh;
   }
   #hero .container {
     margin-top: 100px;
